<resources>
    <string name="app_name" translatable="false">CalcY</string>
    <string name="howdy">Howdy!</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="login_success">Login Sucessful</string>
    <string name="login_fail">Enter Valid Details</string>
    <string name="one">"1"</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="c">C</string>
    <string name="syntax_error">error</string>
    <string name="del">Del</string>
</resources>