<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".calculator">

    <TextView
        android:id="@+id/input_expression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/zero"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textAlignment="textEnd"
        android:gravity="center_vertical"
        />
    <TextView
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textColor="@color/white"
        android:maxLength="10"
        android:textSize="40sp"
        android:textAlignment="textEnd"
        android:layout_marginBottom="5dp"/>
    <LinearLayout
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">
            <Button style="@style/numbers"
                android:id="@+id/tvCan"
                android:text="@string/c"
                android:textColor="@color/teal_200"/>
            <Button style="@style/numbers"
                android:id="@+id/tvopbracket"
                android:text="("
                android:textColor="@color/action_button"/>
            <Button style="@style/numbers"
                android:id="@+id/tvclosebracket"
                android:text=")"
                android:textColor="@color/action_button"/>
            <Button style="@style/operations"
                android:id="@+id/tvDiv"
                android:text="/" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">
            <Button style="@style/numbers"
                android:id="@+id/number7"
                android:text="@string/seven"/>
            <Button style="@style/numbers"
                android:id="@+id/number8"
                android:text="@string/eight" />
            <Button style="@style/numbers"
                android:id="@+id/number9"
                android:text="@string/nine" />
            <Button style="@style/operations"
                android:id="@+id/tvMul"
                android:text="*" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">
            <Button style="@style/numbers"
                android:id="@+id/number4"
                android:text="@string/four" />
            <Button style="@style/numbers"
                android:id="@+id/number5"
                android:text="@string/five" />
            <Button style="@style/numbers"
                android:id="@+id/number6"
                android:text="@string/six" />
            <Button style="@style/operations"
                android:id="@+id/tvSub"
                android:text="-" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">
            <Button style="@style/numbers"
                android:id="@+id/number1"
                android:text="@string/one"/>
            <Button style="@style/numbers"
                android:id="@+id/number2"
                android:text="@string/two" />
            <Button style="@style/numbers"
                android:id="@+id/number3"
                android:text="@string/three" />
            <Button style="@style/operations"
                android:id="@+id/tvAdd"
                android:text="+" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">
            <Button style="@style/numbers"
                android:id="@+id/numberdot"
                android:text="." />
            <Button style="@style/numbers"
                android:id="@+id/number0"
                android:text="@string/zero" />
            <Button style="@style/numbers"
                android:id="@+id/number_del"
                android:text="@string/del"
                android:textColor="@color/teal_200"/>
            <Button style="@style/operations"
                android:id="@+id/tvEqual"
                android:text="=" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">
            <Button style="@style/operations"
                android:id="@+id/history"
                android:text="History"
                android:onClick="history"/>

        </LinearLayout>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>