<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/howdy"
        android:textSize="70sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/action_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp" />

    <EditText
        android:id="@+id/tvUserName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="250dp"
        android:maxLength="8"/>
    <EditText
        android:id="@+id/tvPasswd"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/tvUserName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        android:maxLength="15"/>
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:backgroundTint="@color/action_button"
        app:layout_constraintTop_toTopOf="@id/tvPasswd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="140dp"
        android:onClick="loginCheck"/>


</androidx.constraintlayout.widget.ConstraintLayout>